# Delyx-Next

./: .gitignore  AGENTS.md  Cargo.toml  DELYX_NEXT_CAMPAIGN_MODE_ARCHITECTURE.md  DELYX_NEXT_EMBEDDED_MODEL_RUNTIME_100_PERCENT_PLAN.md  DELYX_NEXT_PROJECTS_ATTACHMENTS_MCP_ARCHITECTURE.md  DELYX_NEXT_UI_FIRST_CODEX_BUILD_PLAN.md  README.md  ROADMAP.md  SOURCE_OF_TRUTH.md  dev-cuda.cmd  package-lock.json  package.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/migrations/: 0001_agent_run_ledger.sql  0002_campaign_mode.sql
apps/desktop/src-tauri/packs/civil-war/: lore.md  pack.json  scenarios.json
apps/desktop/src-tauri/packs/korea/: lore.md  pack.json  scenarios.json
apps/desktop/src-tauri/src/: agent_drive.rs  agent_drive_apply_tests.rs  agent_drive_approval_tests.rs  agent_drive_approvals.rs  agent_drive_bridge.rs  agent_drive_steps.rs  agent_drive_tests.rs  agent_drive_types.rs  agent_executor.rs  agent_executor_apply_tests.rs  agent_executor_bridge.rs  agent_executor_bridge_tests.rs  agent_executor_tests.rs  agent_patch_apply_step.rs  agent_patch_apply_step_tests.rs  agent_patch_draft_bridge.rs  agent_patch_draft_bridge_tests.rs  agent_patch_draft_context.rs  agent_patch_draft_context_tests.rs  agent_patch_draft_dispatch.rs  agent_patch_draft_parser.rs  agent_patch_draft_receipts.rs  agent_patch_draft_step.rs  agent_patch_draft_step_tests.rs  agent_patch_restore_executor.rs  agent_patch_restore_executor_tests.rs  agent_review_executor.rs  agent_review_executor_bridge.rs  agent_review_executor_bridge_tests.rs  agent_review_executor_tests.rs  agent_review_revision_bridge.rs  agent_review_revision_bridge_tests.rs  agent_review_step.rs  agent_review_step_tests.rs  agent_run.rs  agent_run_commands.rs  agent_run_evidence_persistence.rs  agent_run_ids.rs  agent_run_outcome.rs  agent_run_persistence.rs  (+247 more)
docs/: ARCHITECTURE.md  (+8 more)
(+274 files in other folders)
