[package]
name = "delyx-next-desktop"
version = "0.0.0"
edition = "2021"

[lib]
name = "delyx_next_desktop"
path = "src/lib.rs"

[[bin]]
name = "delyx-next-desktop"
path = "src/main.rs"

[dependencies]
tauri = { version = "2.11.2", features = [] }

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }
