[package]
name = "delyx-next-desktop"
version = "0.0.0"
edition = "2021"

[lib]
name = "delyx_next_desktop"
path = "src/lib.rs"

[[bin]]
name = "delyx-next-desktop"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
tauri = { version = "2.11.2", features = [] }
tauri-plugin-single-instance = "2.4.2"

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }
