[package]
name = "delyx-next-desktop"
version = "0.1.0"
edition = "2021"

[lib]
name = "delyx_next_desktop"
path = "src/lib.rs"

[[bin]]
name = "delyx-next-desktop"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
tauri = { version = "2.11.2", features = [] }
tauri-plugin-single-instance = "2.4.2"
keyring = { version = "3", features = ["apple-native", "windows-native", "linux-native"] }
tokio = { version = "1", features = ["sync", "rt-multi-thread", "macros"] }

mistralrs = { version = "0.8.1", optional = true, default-features = false }

[features]
default = []
# Embedded in-process local model runtime. Heavy dependency; opt-in only.
embedded_mistral = ["dep:mistralrs"]
embedded_mistral_cuda = ["embedded_mistral", "mistralrs/cuda"]

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }
